--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.2",
     "axios": "^0.26.1",
+    "cookie": "^0.4.2",
     "next": "12.1.0",
     "next-plugin-antd-less": "^1.8.0",
     "react": "17.0.2",
