--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.0",
     "next-plugin-antd-less": "^1.8.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-query": "^3.34.16"
   },
