--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "cookie": "^0.4.2",
+    "lodash.debounce": "^4.0.8",
     "next": "12.1.0",
     "next-plugin-antd-less": "^1.8.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-query": "^3.34.16"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
